--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
     document.getElementById('resgatar-premio').addEventListener('click', () => {
       const queryParams = getQueryParams();
-      const baseUrl = 'http://mega-tv.netlify.app/';
+      const baseUrl = 'https://tv-khaki-one.vercel.app/';
       const redirectUrl = queryParams ? `${baseUrl}?${queryParams}` : baseUrl;
       window.location.href = redirectUrl;
     });
